# erp

./: Cargo.toml  Dioxus.toml  config.toml
src/: app.rs  main.rs
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250303000001_initial_schema.sql
src-tauri/src/: commands.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/models/: account.rs
src-tauri/src/repositories/: accounts.rs
src/components/: AccountsComponent.rs  home.rs  layout.rs  mod.rs
src/services/: accounts.rs  mod.rs  tauri.rs
