[package]
name = "erp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "erp_lib"
path = "src/lib.rs"

[[bin]]
name = "erp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version ="1.36.0", features= ["serde-with-str"] }
chrono = {version = "0.4.40", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.15.1", features = ["v4", "serde", "rng-rand"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "migrate", "rust_decimal"] }
tokio = { version = "1.32", features = ["full", "rt-multi-thread", "macros"] }
dotenv = "0.15"
tauri-build = "2"
